// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SqsSource should accept config 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "testpipe": Object {
      "Properties": Object {
        "RoleArn": "test-role-arn",
        "Source": Object {
          "Fn::GetAtt": Array [
            "testsourcequeueDAC45857",
            "Arn",
          ],
        },
        "SourceParameters": Object {
          "SqsQueueParameters": Object {
            "BatchSize": 10,
            "MaximumBatchingWindowInSeconds": 10,
          },
        },
        "Target": "test-target-arn",
      },
      "Type": "AWS::Pipes::Pipe",
    },
    "testsourcequeueDAC45857": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SqsSource should accept filter 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "testpipe": Object {
      "Properties": Object {
        "RoleArn": "test-role-arn",
        "Source": Object {
          "Fn::GetAtt": Array [
            "testsourcequeueDAC45857",
            "Arn",
          ],
        },
        "SourceParameters": Object {
          "FilterCriteria": Object {
            "Filters": Array [
              Object {
                "Pattern": "{\\"foo\\":\\"bar\\"}",
              },
            ],
          },
        },
        "Target": "test-target-arn",
      },
      "Type": "AWS::Pipes::Pipe",
    },
    "testsourcequeueDAC45857": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SqsSource should synth 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "testpipe": Object {
      "Properties": Object {
        "RoleArn": "test-role-arn",
        "Source": Object {
          "Fn::GetAtt": Array [
            "testsourcequeueDAC45857",
            "Arn",
          ],
        },
        "SourceParameters": Object {},
        "Target": "test-target-arn",
      },
      "Type": "AWS::Pipes::Pipe",
    },
    "testsourcequeueDAC45857": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
